# aioevents

./: .travis.yml  Pipfile  README.rst  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
aioevents/: __init__.py
examples/: main.py
tests/: test_aioevents.py  tests.py
